--- a/Simulacion_basada_en_agentes/paralela/pom.xml
+++ b/Simulacion_basada_en_agentes/paralela/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>eci.nuti</groupId>
-    <artifactId>secuencial</artifactId>
+    <artifactId>paralela</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
